objects/MCM_Quarterly_Volume__c.object
<CustomObject>
    <fields>
        <fullName>PCM_MCM_Detail__c</fullName>
        <label>MCM</label>
        <referenceTo>PCM_MCM_Detail__c</referenceTo>
        <relationshipLabel>MCM Quarterly Volume</relationshipLabel>
        <relationshipName>MCM_Quarterly_Volume</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Q1_Volume__c</fullName>
        <label>Q1 Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q2_Volume__c</fullName>
        <label>Q2 Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q3_Volume__c</fullName>
        <label>Q3 Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>MCM Quarterly Volume</label>
    <nameField>
        <label>MCM Quarterly Volume Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MCM Quarterly Volume</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>